[package]
name = "markdtohtml"
description = "Tool to convert markdown files to html files."
repository = "https://github.com/Daiki48/markdtohtml"
authors = ["Daiki Nakashima <daiki48.engineer@gmail.com"]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"

[dependencies]
